# cachin

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  ONBOARDING_IMPLEMENTATION.md  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md  README.md  SMART_RULES_IMPLEMENTATION.md  nixpacks.toml  package.json  pyproject.toml  requirements.txt  tailwind.config.js
backend/: db.sqlite3
backend/expenses/: CATEGORIZATION_RULES.md  admin.py  apps.py  default_config.py  email_ingest.py  examples_rules.py  exchange_rates.py  forms.py  models.py  onboarding_middleware.py  rate_logic.py  rule_engine.py  signals.py  tasks.py  test_rule_engine.py  urls.py  views.py
backend/expenses/email_parsers/: visa.py
backend/expenses/migrations/: 0006_useremailconfig_useremailmessage.py  0007_transaction_external_pending.py  0008_alter_transaction_unique_together_splitwiseaccount.py  0011_add_categorization_rules.py  0012_category_counts_to_total_category_description_and_more.py  0013_update_existing_categories.py  0013_userpreferences.py  0014_useremailconfig_user_email.py
backend/expenses/templatetags/: expense_filters.py
backend/misfinanzas/: celery.py  settings.py  urls.py
backend/templates/: base.html  landing.html  profile.html
djangotutorial/: bugs.txt  db.sqlite3
djangotutorial/polls/: forms.py  models.py  urls.py  views.py
djangotutorial/templates/: base.html  profile.html
features/: copy_paste.md  ejemplo.eml  email_processing.md  features.md  flow_usuario_nuevo.txt  mobile_compatibility.txt  splitwise.md
(+39 files in other folders)
